changed flex shrink
set the width of wrappers from 100% to 1520px and put flex-shrink : 0; in flex-items so that the layout stays with small screens

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,7 @@
 footer{
     padding : 32px 205px;
     border-bottom : 34px;
+    width : 1520px;
     height : 180px;
     display : flex;
     justify-content: space-between;
@@ -15,7 +16,9 @@ footer .company-logo{
     margin-right : 90px;
 }
 
-
+.footer__info{
+    flex-shrink: 0;
+}
 
 
 .footer__info .info__link span:nth-of-type(odd),
